--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,6 +62,10 @@ i {
     transform: translateY(10px);
 }
 
+.product {
+    cursor: pointer;
+}
+
 .product .card {
     border: 1px solid #efefef !important;
     border-radius: 5% !important;
@@ -74,7 +78,6 @@ i {
 }
 
 .product .card .img * {
-    width: 80%;
     height: auto;
 }
 
