--- a/PRODUCT/css/style.css
+++ b/PRODUCT/css/style.css
@@ -25,33 +25,12 @@ i {
     color: #0F94CF;
 }
 
-.price__color {
-    color: #FD475A;
-}
-
-.background__0F94CF {
-    background-color: #0F94CF;
-}
-
-.title>h5::after {
-    content: "";
-    border: 1px solid #0F94CF;
-    display: block;
-    margin: 0;
-    transform: translateY(10px);
-}
-
-.comment button {
-    border: 1px solid #0F94CF;
-    color: #0F94CF;
-}
-
-.comment button:hover {
-    background-color: #0F94CF !important;
-    color: white;
+input {
+    border: 1px solid #777979 !important;
 }
 
 /* HEADER */
+
 .header__logo i {
     font-size: 2rem;
 }
@@ -94,102 +73,62 @@ i {
     color: #0F94CF;
 }
 
-.choose__product>div>div>div:nth-child(2) {
+.content__filter {
+    border: 1px solid #777979;
+    border-radius: 20px;
+}
+
+.filter-version .col-5,
+.filter-color .col-5,
+.filter-model .col-5 {
+    background-color: lightgray;
+    margin: 5px 0;
+}
+
+.filter-version .col-5 input[type="checkbox"],
+.filter-color .col-5 input[type="checkbox"],
+.filter-model .col-5 input[type="radio"] {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    border: 0 !important;
+}
+
+.filter-version .col-5 input[type="checkbox"]:checked,
+.filter-color .col-5 input[type="checkbox"]:checked,
+.filter-model .col-5 input[type="radio"]:checked {
     background-color: #0F94CF;
 }
 
-.choose__product__version .version {
-    border: 1px solid lightgray;
+.product {
     cursor: pointer;
 }
 
-label {
-    cursor: pointer;
+.product .card {
+    border: 1px solid #efefef !important;
+    border-radius: 5% !important;
+    transition: 0.2s;
 }
 
-.choose__product__version .version:hover {
-    border: 1px solid #0F94CF;
+.product .card:hover {
+    transform: scale(1.1);
 }
 
-/* OFFER */
-.product__offer {
-    border: 1px solid #FD475A;
+.product .card .img {
+    border-bottom: none;
+    background-color: #f5f5f5;
+    border-radius: 5% 5% 0 0 !important;
 }
 
-.product__offer .offer__title {
-    background-color: #FD475A;
-    transform: translate(0, -50%);
-    margin: 0;
+.product .card .img * {
+    height: auto;
 }
 
-.product__offer li {
-    color: #FD475A;
-}
-
-#buyNow {
-    border: 2px solid #0F94CF;
-    background-color: white;
-}
-
-#buyNow * {
-    color: #0F94CF;
-    transition: 0.8s;
-}
-
-#buyNow:hover {
-    background-color: #0F94CF;
-}
-
-#buyNow:hover * {
-    color: white;
-}
-
-#installment {
-    border: 2px solid #FD475A;
-    background-color: white;
-}
-
-#installment * {
-    color: #FD475A;
-    transition: 0.8s;
-}
-
-#installment:hover {
-    background-color: #FD475A;
-}
-
-#installment:hover * {
-    color: white;
-}
-
-#addCart {
-    border: 2px solid #FF990E;
-    background-color: white;
-}
-
-#addCart * {
-    color: #FF990E;
-    transition: 0.8s;
-}
-
-#addCart:hover {
-    background-color: #FF990E;
-}
-
-#addCart:hover * {
-    color: white;
-}
-
-/* SPECIFICATION */
-.specifications__left *:no-button {
-    color: black;
-}
-
-.specifications__left__content__collage {
-    height: 789px;
+.product .card .card-text {
+    color: #249B3E;
 }
 
 /* FOOTER */
+
 footer {
     background-color: #0F94CF;
 }
@@ -223,10 +162,6 @@ footer .row li:hover a {
     .header__user__line {
         display: none;
     }
-
-    .product>div:nth-child(n+3) {
-        display: none;
-    }
 }
 
 @media (max-width: 767.98px) {
@@ -236,6 +171,10 @@ footer .row li:hover a {
 
     .header__logo>h1 {
         display: none;
+    }
+
+    .content__filter {
+        border: 0;
     }
 }
 
