--- a/PRODUCT/css/style.css
+++ b/PRODUCT/css/style.css
@@ -179,6 +179,18 @@ footer .row li:hover a {
     .content__filter {
         border: 0;
     }
+
+    #filter {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;
+        background-color: #f5f5f5;
+        min-width: 300px;
+        padding: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
 }
 
 @media (max-width: 991.98px) {
