--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 16px;
     color: #777979;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
