--- a/DES_PRODUCT/CSS/style.css
+++ b/DES_PRODUCT/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 /* GLOBAL */
 * {
     margin: 0;
@@ -5,6 +7,7 @@
     box-sizing: border-box;
     font-size: 16px;
     color: #777979;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
