--- a/LOGIN/css/style.css
+++ b/LOGIN/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 html,
 body {
@@ -7,6 +7,7 @@ body {
 	font-family: 'Raleway';
 	font-size: 16px;
 	font-weight: bold;
+	font-family: 'Roboto', sans-serif
 }
 
 .bg {
