--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,10 +65,6 @@ i {
     transform: translateY(10px);
 }
 
-.product {
-    cursor: pointer;
-}
-
 .product .card {
     border: 1px solid #efefef !important;
     border-radius: 5% !important;
@@ -87,6 +83,16 @@ i {
 
 .product .card .img * {
     height: auto;
+}
+
+.product .card .card-title {
+    width: 175px;
+    height: 50px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .product .card .card-text {
@@ -182,10 +188,6 @@ footer .row li:hover a {
         display: none;
     }
 
-    .product>div:nth-child(n+3) {
-        display: none;
-    }
-
 }
 
 @media (max-width: 767.98px) {
@@ -194,10 +196,6 @@ footer .row li:hover a {
     }
 
     .header__logo>h1 {
-        display: none;
-    }
-
-    .product>div:nth-child(n+4) {
         display: none;
     }
 }
@@ -215,9 +213,10 @@ footer .row li:hover a {
         display: none;
     }
 
-    .product>div:nth-child(n+5) {
-        display: none;
+    .product .card .card-title {
+        width: 160px;
     }
+
 }
 
 @media (max-width: 1199.98px) {}
