complete load product

--- a/PRODUCT/css/style.css
+++ b/PRODUCT/css/style.css
@@ -115,6 +115,16 @@ input {
     transition: 0.2s;
 }
 
+.product .card .card-title {
+    width: 175px;
+    height: 50px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .product .card:hover {
     transform: scale(1.1);
 }
