--- a/LOGIN/css/style.css
+++ b/LOGIN/css/style.css
@@ -1,50 +1,136 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-html,
-body {
-	width: 100%;
-	height: 100%;
-	font-family: 'Raleway';
-	font-size: 16px;
-	font-weight: bold;
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    color: #0F94CF;
 }
 
-.bg {
-	background: url('../images/image1.png') no-repeat;
-	background-size: cover;
-	width: 100%;
-	height: 100%;
+.container .row{
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    border-radius: 30px;
+    box-shadow: 12px 12px 22px #0F94CF;
+   
 }
 
-.row-container {
-	border: 1px solid #fff;
-	border-radius: 20px;
-	margin-top: 20vh;
-	/* vh= Viewport's height */
-	padding: 30px;
-	-webkit-box-shadow: 13px 14px 5px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 13px 14px 5px 0px rgba(0, 0, 0, 0.75);
-	box-shadow: 13px 14px 5px 0px rgba(0, 0, 0, 0.75);
+.container img {
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    width: 100%;
+    height: 100%;
 }
 
-label,
-.form-check-label,
-h1 {
-	color: white;
-	text-shadow: 2px 2px 10px #000;
+.container {
+    width: 100%;
+    height: 100%;
 }
 
-.emailError,
-.passwordError {
-	color: red;
-	background-color: blanchedalmond;
-	padding-left: 10px;
-	border-radius: 4px;
-	margin-top: 1px;
+.btn1 {
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 100%;
+    background-color: #0F94CF;
+    color: white;
+    border-radius: 6px;
+    font-weight: bold;
 }
 
-.btn-custom {
-	/* background-color: rgb(8, 101, 115); */
-	background-color: #014f70;
-	color: #fff;
+.btn1:hover {
+    background: white;
+    border: 1px solid;
+    color: #0F94CF;
 }
+
+a {
+    color: #777979;
+}
+
+.wrap {
+    margin: auto 75px;
+}
+
+.title__color,
+i {
+    color: #0F94CF;
+}
+
+/* FOOTER */
+footer {
+    background-color: #0F94CF;
+}
+
+footer .row * {
+    color: white !important;
+}
+
+footer .row a {
+    text-decoration: none;
+}
+
+footer .row li:hover a {
+    text-decoration: underline white;
+}
+
+/* RESPONSIVE */
+@media (max-width: 575.98px) {
+    .wrap {
+        margin: auto 0;
+    }
+
+    .header__logo>h1 {
+        display: none;
+    }
+
+    .header__user>* {
+        display: block;
+    }
+
+    .header__user__line {
+        display: none;
+    }
+
+    .product>div:nth-child(n+3) {
+        display: none;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .wrap {
+        margin: auto 0;
+    }
+
+    .header__logo>h1 {
+        display: none;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .wrap {
+        margin: auto 10px;
+    }
+
+    .header__user>* {
+        display: block;
+    }
+
+    .header__user__line {
+        display: none;
+    }
+}
+
+@media (max-width: 1199.98px) {}
+
+@media (max-width: 1399.98px) {}
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+  }
+  
